Adiciona endpoint para retornar todos os livros disponiveis para alugar
